<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_with"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/btn_normal_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:padding="5sp"
            android:text="@string/normal_bluetooth"
            android:gravity="center_vertical"
             />

        <TextView
            android:id="@+id/btn_cti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cti"
            android:textSize="18sp "
            android:padding="5sp"
            android:gravity="center_vertical"
            />
    </LinearLayout>
</LinearLayout>